rename puzzle game title and change puzzle game url

--- a/CCIP/Supporting Files/en.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/en.lproj/Localizable.strings
@@ -48,7 +48,7 @@
 "day2lunch" = "Day 2 Lunch";
 "Addition" = "Addition";
 "IRC" = "IRC Channel";
-"Puzzle" = "Puzzle Game";
+"Puzzle" = "Booth Reward Activity";
 "Ticket" = "My Ticket";
 "TicketNotice" = "Please keep your ticket secretly and carefully, only shows for our staff or in booth event";
 "TicketNonExistNotice" = "Your Ticket not import into COSCUP Pass, please try again after import !";
