--- a/CCIP/Supporting Files/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/zh-Hant.lproj/Localizable.strings
@@ -48,7 +48,7 @@
 "day2lunch" = "第二天午餐領取";
 "Addition" = "其他";
 "IRC" = "IRC 頻道";
-"Puzzle" = "大地遊戲";
+"Puzzle" = "開源巔峰挑戰賽";
 "Ticket" = "我的票卷";
 "TicketNotice" = "請妥善保管您的票卷，僅提供此票卷給我們的工作人員或您參與攤位活動的工作人員使用";
 "TicketNonExistNotice" = "您的票卷尚未登陸進 COSCUP Pass，請登陸後再使用此功能！";
