--- a/CCIP/Supporting Files/SITCON/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/SITCON/zh-Hant.lproj/Localizable.strings
@@ -45,13 +45,15 @@
 "day2lunch" = "第二天午餐領取";
 "Addition" = "其他";
 "IRC" = "IRC 頻道";
-"Puzzle" = "開源巔峰挑戰賽";
+"Puzzle" = "知識王";
 "Ticket" = "我的票卷";
 "TicketNotice" = "請妥善保管您的票卷，僅提供此票卷給我們的工作人員或您參與攤位活動的工作人員使用";
 "TicketNonExistNotice" = "您的票卷尚未登陸進 SITCON Pass，請登陸後再使用此功能！";
 "Telegram" = "Telegram 群組";
 "Maps" = "場內地圖";
+"StaffsWeb" = "籌備團隊";
 "Staffs" = "籌備團隊";
+"SponsorsWeb" = "贊助";
 "Sponsors" = "贊助";
 "Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
