--- a/CCIP/Supporting Files/SITCON/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/SITCON/zh-Hant.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 "CheckinViewButtonPressed" = "已報到";
 "CheckinText" = "";
 "CheckinTextVipKit" = "";
-"UseNoticeText" = "從封閉到開源\n從個人到社群\n我們曾走過很長一段路";
+"UseNoticeText" = "";
 "meatLunch" = "葷食";
 "vegetarianLunch" = "素食";
 "UseButton_kit" = "確定要領取迎賓袋嗎？";
