--- a/CCIP/Supporting Files/PyCon/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/PyCon/zh-Hant.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "TicketNotice" = "請妥善保管您的票卷，僅提供此票卷給我們的工作人員或您參與攤位活動的工作人員使用";
 "TicketNonExistNotice" = "您的票卷尚未登陸進 PyCon Pass，請登陸後再使用此功能！";
 "Telegram" = "Telegram 群組";
+"MapsWeb" = "場內地圖";
 "Maps" = "場內地圖";
 "StaffsWeb" = "籌備團隊";
 "Staffs" = "籌備團隊";
