use Partners and 合作夥伴 for gov summit instead of Sponsors and 贊助

--- a/CCIP/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -56,8 +56,8 @@
 "Maps" = "Maps";
 "StaffsWeb" = "Staffs";
 "Staffs" = "Staffs";
-"SponsorsWeb" = "Sponsors";
-"Sponsors" = "Sponsors";
+"SponsorsWeb" = "Partners";
+"Sponsors" = "Partners";
 "Acknowledgements" = "Developers";
 "Contributions" = "Contributors";
 "Libraries" = "Open Source Libraries";
