--- a/CCIP/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -56,8 +56,8 @@
 "Maps" = "場內地圖";
 "StaffsWeb" = "籌備團隊";
 "Staffs" = "籌備團隊";
-"SponsorsWeb" = "贊助";
-"Sponsors" = "贊助";
+"SponsorsWeb" = "合作夥伴";
+"Sponsors" = "合作夥伴";
 "Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
 "Libraries" = "開源專案";
