--- a/CCIP/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -50,7 +50,7 @@
 "Puzzle" = "開源巔峰挑戰賽";
 "Ticket" = "我的票卷";
 "TicketNotice" = "請妥善保管您的票卷，僅提供此票卷給我們的工作人員或您參與攤位活動的工作人員使用";
-"TicketNonExistNotice" = "您的票卷尚未登錄進 OPass，請登陸後再使用此功能！";
+"TicketNonExistNotice" = "您的票卷尚未登錄進 OPass，請登錄後再使用此功能！";
 "Telegram" = "Telegram 群組";
 "MapsWeb" = "場內地圖";
 "Maps" = "場內地圖";
