use empty instead of the placeholder of empty content

--- a/CCIP/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/CCIP/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -91,4 +91,4 @@
 "LoginGreeting" = "Hi %@, welcome and enjoy!";
 "AfterEventMessage" = "After the Event, we need you in-form a questionnaire for us, thanks.";
 "AfterEventActionTitle" = "Open questionnaire";
-"EmptyScheduleDetailContent" = "Oops, there is nothing?";
+"EmptyScheduleDetailContent" = "";
