--- a/OPass/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/OPass/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -87,6 +87,7 @@
 "ExpiredMessage" = "Could not use at this time, because it has been expired.";
 "ExpiredButtonOk" = "Okay";
 "ExpiredOrNotAvailable" = "Expired or not available";
+"OpenQRCodeFromFile" = "File ...";
 "QRFileNotAvailableTitle" = "Extract Error!!";
 "QRFileNotAvailableDesc" = "Can not extract QR Code from the image";
 "Networking_Broken" = "Error while networking issues";
