rename Maps to Venue and cleanup useless things

--- a/OPass/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/OPass/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -55,12 +55,9 @@
 "TicketNotice" = "Please keep your ticket secretly and carefully, only shows for our staff or in booth event";
 "TicketNonExistNotice" = "Your Ticket not import into OPass, please try again after import !";
 "Telegram" = "Telegram Groups";
-"MapsWeb" = "Maps";
-"Maps" = "Maps";
+"VenueWeb" = "Venue";
 "StaffsWeb" = "Staffs";
-"Staffs" = "Staffs";
 "SponsorsWeb" = "Partners";
-"Sponsors" = "Partners";
 "Acknowledgements" = "Developers";
 "Contributions" = "Contributors";
 "Libraries" = "Open Source Libraries";
