--- a/OPass/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/OPass/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -55,12 +55,9 @@
 "TicketNotice" = "請妥善保管您的票券，僅提供此票券給我們的工作人員或您參與攤位活動的工作人員使用";
 "TicketNonExistNotice" = "您的票券尚未登錄進 OPass，請登錄後再使用此功能！";
 "Telegram" = "Telegram 群組";
-"MapsWeb" = "場內地圖";
-"Maps" = "場內地圖";
+"VenueWeb" = "場內地圖";
 "StaffsWeb" = "籌備團隊";
-"Staffs" = "籌備團隊";
 "SponsorsWeb" = "合作夥伴";
-"Sponsors" = "合作夥伴";
 "Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
 "Libraries" = "開源專案";
