--- a/Supporting Files/OPass/en.lproj/InfoPlist.strings
+++ b/Supporting Files/OPass/en.lproj/InfoPlist.strings
@@ -9,6 +9,7 @@
 
 CFBundleDisplayName = "OPass";
 CFBundleName = "OPass";
+NSBluetoothPeripheralUsageDescription = "Use your Bluetooth connection to confirm you are nearby event of iBeacon devices";
 NSLocationAlwaysUsageDescription = "Use your location service for check your pass is in validated range to use";
 NSLocationWhenInUseUsageDescription = "Use your location service for check your pass is in validated range to use";
 NSLocationAlwaysAndWhenInUseUsageDescription = "Use your location service for check your pass is in validated range to use";
