update localizable for sponsors

--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -57,7 +57,7 @@
 "Telegram" = "Telegram 群組";
 "VenueWeb" = "場內地圖";
 "StaffsWeb" = "籌備團隊";
-"SponsorsWeb" = "贊助商";
+"SponsorsWeb" = "贊助";
 "PartnersWeb" = "合作夥伴";
 "Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
