--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -52,7 +52,7 @@
 "IRC" = "IRC 頻道";
 "TicketNotice" = "請妥善保管您的票券，僅提供此票券給我們的工作人員或您參與攤位活動的工作人員使用";
 "TicketNonExistNotice" = "您的票券尚未登錄進 OPass，請登錄後再使用此功能！";
-"Puzzle" = "開源巔峰挑戰賽";
+"Puzzle" = "真·實境矩陣";
 "Ticket" = "我的票券";
 "Telegram" = "Telegram 群組";
 "VenueWeb" = "場內地圖";
