--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -31,6 +31,7 @@
 "UseButton_shirt" = "Confirm to get the T-Shirt?";
 "UseButton_kit" = "Confirm to get the KIT bag?";
 "UseButton_vipkit" = "Confirm to get the VIP KIT bag?";
+"UseButton_lunch" = "Confirm to get lunch?";
 "UseButton_day1lunch" = "Confirm to get day 1 lunch?";
 "UseButton_day2lunch" = "Confirm to get day 2 lunch?";
 "UseButton_day3lunch" = "Confirm to get day 3 lunch?";
