add support `webview` event feature to open safari controller

--- a/Supporting Files/OPass/en.lproj/Localizable.strings
+++ b/Supporting Files/OPass/en.lproj/Localizable.strings
@@ -110,3 +110,4 @@
 "icon-SponsorsWeb" = "hand-holding-heart";
 "icon-PartnersWeb" = "hands-helping";
 "icon-Acknowledgements" = "people-carry";
+"icon-MoreWeb" = "cookie-bite";
