--- a/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
+++ b/Supporting Files/OPass/zh-Hant.lproj/Localizable.strings
@@ -50,6 +50,7 @@
 "Acknowledgements" = "開發者";
 "Contributions" = "貢獻者";
 "Libraries" = "開源專案";
+"InternalConfig" = "內部設定";
 "Introduction" = "簡介";
 "Speaker" = "講師";
 "GuideViewMessage" = "請透過行前通知內的連結開啟此應用程式\n\n您也可以點擊右上角打開相機掃描售票系統提供的 QR Code";
@@ -102,3 +103,4 @@
 "icon-PartnersWeb" = "fas fa-hands-helping";
 "icon-Acknowledgements" = "fas fa-people-carry";
 "icon-MoreWeb" = "fas fa-cookie-bite";
+"icon-InternalConfig" = "fas fa-hammer";
